--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -29,7 +29,7 @@ bleach==5.0.1
     # via nbconvert
 build==0.8.0
     # via pip-tools
-certifi==2022.6.15.1
+certifi==2022.9.14
     # via requests
 cffi==1.15.1
     # via argon2-cffi-bindings
@@ -55,7 +55,7 @@ entrypoints==0.4
     # via jupyter-client
 executing==1.0.0
     # via stack-data
-fastjsonschema==2.16.1
+fastjsonschema==2.16.2
     # via nbformat
 filelock==3.8.0
     # via virtualenv
@@ -63,11 +63,11 @@ flake8==4.0.1
     # via -r requirements.dev.in
 identify==2.5.5
     # via pre-commit
-idna==3.3
+idna==3.4
     # via
     #   anyio
     #   requests
-ipykernel==6.15.2
+ipykernel==6.15.3
     # via
     #   nbclassic
     #   notebook
@@ -119,7 +119,7 @@ jupyter-server==1.18.1
     #   jupyterlab-server
     #   nbclassic
     #   notebook-shim
-jupyterlab==3.4.6
+jupyterlab==3.4.7
     # via -r requirements.dev.in
 jupyterlab-pygments==0.2.2
     # via nbconvert
@@ -150,7 +150,7 @@ nbconvert==7.0.0
     #   jupyter-server
     #   nbclassic
     #   notebook
-nbformat==5.4.0
+nbformat==5.6.0
     # via
     #   jupyter-server
     #   nbclassic
@@ -239,7 +239,7 @@ pyyaml==6.0
     # via
     #   detect-secrets
     #   pre-commit
-pyzmq==23.2.1
+pyzmq==24.0.1
     # via
     #   ipykernel
     #   jupyter-client
@@ -279,6 +279,7 @@ tomli==2.0.1
     # via
     #   black
     #   build
+    #   jupyterlab
     #   pep517
 tornado==6.2
     # via
@@ -289,7 +290,7 @@ tornado==6.2
     #   nbclassic
     #   notebook
     #   terminado
-traitlets==5.3.0
+traitlets==5.4.0
     # via
     #   ipykernel
     #   ipython
