--- a/requirements.txt
+++ b/requirements.txt
@@ -4,20 +4,50 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
-joblib==1.1.0
+contourpy==1.0.5
+    # via matplotlib
+cycler==0.11.0
+    # via matplotlib
+fonttools==4.37.3
+    # via matplotlib
+greenlet==1.1.3
+    # via sqlalchemy
+joblib==1.2.0
     # via scikit-learn
+kiwisolver==1.4.4
+    # via matplotlib
+mariadb==1.1.4
+    # via -r requirements.in
+matplotlib==3.6.0
+    # via -r requirements.in
+mysql==0.0.3
+    # via -r requirements.in
+mysqlclient==2.1.1
+    # via mysql
 numpy==1.23.3
     # via
     #   -r requirements.in
+    #   contourpy
+    #   matplotlib
     #   pandas
     #   scikit-learn
     #   scipy
-pandas==1.4.4
+packaging==21.3
+    # via matplotlib
+pandas==1.5.0
     # via -r requirements.in
+pillow==9.2.0
+    # via matplotlib
 plotly==5.10.0
     # via -r requirements.in
+pyparsing==3.0.9
+    # via
+    #   matplotlib
+    #   packaging
 python-dateutil==2.8.2
-    # via pandas
+    # via
+    #   matplotlib
+    #   pandas
 pytz==2022.2.1
     # via pandas
 scikit-learn==1.1.2
@@ -28,7 +58,9 @@ six==1.16.0
     # via python-dateutil
 sklearn==0.0
     # via -r requirements.in
-tenacity==8.0.1
+sqlalchemy==1.4.41
+    # via -r requirements.in
+tenacity==8.1.0
     # via plotly
 threadpoolctl==3.1.0
     # via scikit-learn
