--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ contourpy==1.0.5
     # via matplotlib
 cycler==0.11.0
     # via matplotlib
-fonttools==4.37.4
+fonttools==4.38.0
     # via matplotlib
 greenlet==1.1.3.post0
     # via sqlalchemy
@@ -42,15 +42,15 @@ packaging==21.3
     # via
     #   matplotlib
     #   statsmodels
-pandas==1.5.0
+pandas==1.5.1
     # via
     #   -r requirements.in
     #   statsmodels
 patsy==0.5.3
     # via statsmodels
-pillow==9.2.0
+pillow==9.3.0
     # via matplotlib
-plotly==5.10.0
+plotly==5.11.0
     # via -r requirements.in
 py4j==0.10.9
     # via pyspark
@@ -68,11 +68,13 @@ python-dateutil==2.8.2
     # via
     #   matplotlib
     #   pandas
-pytz==2022.4
+pytz==2022.5
     # via pandas
-scikit-learn==1.1.2
-    # via sklearn
-scipy==1.9.2
+scikit-learn==1.1.3
+    # via
+    #   -r requirements.in
+    #   sklearn
+scipy==1.9.3
     # via
     #   scikit-learn
     #   statsmodels
@@ -82,7 +84,7 @@ six==1.16.0
     #   python-dateutil
 sklearn==0.0
     # via -r requirements.in
-sqlalchemy==1.4.41
+sqlalchemy==1.4.42
     # via -r requirements.in
 statsmodels==0.13.2
     # via -r requirements.in
