--- a/requirements.txt
+++ b/requirements.txt
@@ -4,21 +4,25 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
-contourpy==1.0.5
+contourpy==1.0.6
     # via matplotlib
 cycler==0.11.0
     # via matplotlib
 fonttools==4.38.0
     # via matplotlib
-greenlet==1.1.3.post0
+greenlet==2.0.1
     # via sqlalchemy
+jinja2==3.1.2
+    # via -r requirements.in
 joblib==1.2.0
     # via scikit-learn
 kiwisolver==1.4.4
     # via matplotlib
 mariadb==1.1.4
     # via -r requirements.in
-matplotlib==3.6.1
+markupsafe==2.1.1
+    # via jinja2
+matplotlib==3.6.2
     # via -r requirements.in
 mysql==0.0.3
     # via -r requirements.in
@@ -38,6 +42,7 @@ numpy==1.23.4
     #   scikit-learn
     #   scipy
     #   statsmodels
+    #   xgboost
 packaging==21.3
     # via
     #   matplotlib
@@ -54,6 +59,8 @@ plotly==5.11.0
     # via -r requirements.in
 py4j==0.10.9
     # via pyspark
+pymysql==1.0.2
+    # via -r requirements.in
 pyparsing==3.0.9
     # via
     #   matplotlib
@@ -68,27 +75,28 @@ python-dateutil==2.8.2
     # via
     #   matplotlib
     #   pandas
-pytz==2022.5
+pytz==2022.6
     # via pandas
 scikit-learn==1.1.3
-    # via
-    #   -r requirements.in
-    #   sklearn
+    # via -r requirements.in
 scipy==1.9.3
     # via
     #   scikit-learn
     #   statsmodels
+    #   xgboost
 six==1.16.0
     # via
     #   patsy
     #   python-dateutil
-sklearn==0.0
+sklearn==0.0.post1
     # via -r requirements.in
-sqlalchemy==1.4.42
+sqlalchemy==1.4.44
     # via -r requirements.in
-statsmodels==0.13.2
+statsmodels==0.13.5
     # via -r requirements.in
 tenacity==8.1.0
     # via plotly
 threadpoolctl==3.1.0
     # via scikit-learn
+xgboost==1.7.1
+    # via -r requirements.in
